--- a/index.html
+++ b/index.html
@@ -2063,7 +2063,7 @@
     <!--END PAGE-->
   </div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script type="module" defer src="./assets/main.js"></script>
+  <script defer src="./assets/main.js"></script>
 </body>
 
 </html>
